--- a/style.css
+++ b/style.css
@@ -340,3 +340,31 @@ nav {
         outline: 2px solid #80bdff;
         outline-offset: 2px;
     }
+
+    /* Estilo de las pestañas */
+.tabs {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.tab-button {
+    padding: 10px 20px;
+    margin: 0 5px;
+    border: none;
+    background-color: #007BFF;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 14px;
+    transition: background-color 0.3s ease;
+}
+
+.tab-button:hover {
+    background-color: #0056b3;
+}
+
+.video-content {
+    display: flex;
+    justify-content: center;
+}
